--- a/Pages/Shared/__Hero.cshtml
+++ b/Pages/Shared/__Hero.cshtml
@@ -8,7 +8,7 @@
                     <h5 class="text-green-severotech text-uppercase mb-3 animated slideInDown">Criatividade e Inovação</h5>
                     <h1 class="display-1 text-green-severotech mb-md-4 animated zoomIn">Soluções Digitais Para Sua Empresa</h1>
                     <a asp-area="" asp-page="/Services" class="btn btn-green py-md-3 px-md-5 me-3 animated slideInLeft">@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                    <a asp-area="" asp-page="/Contato" class="btn btn-outline-green py-md-3 px-md-5 animated slideInRight">Entre em Contato</a>
+                    <a class="btn btn-outline-green py-md-3 px-md-5 animated slideInRight" href=@SocialEnum.WHATSAPP target="_blank">Entre em Contato</a>
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
                     <h5 class="text-green-severotech text-uppercase mb-3 animated slideInDown">Somos a</h5>
                     <h1 class="display-1 text-green-severotech animated zoomIn"><img src="~/landingpage/img/LOGO-MATHEUS-CINZA.png" alt="Descrição da imagem" class="logo-frontal"></h1>
                     <a asp-area="" asp-page="/Services" class="btn btn-green py-md-3 px-md-5 me-3 animated slideInLeft">@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                    <a asp-area="" asp-page="/Contato" class="btn btn-outline-green py-md-3 px-md-5 animated slideInRight">Entre em Contato</a>
+                    <a class="btn btn-outline-green py-md-3 px-md-5 animated slideInRight" href=@SocialEnum.WHATSAPP target="_blank">Entre em Contato</a>
                 </div>
             </div>
         </div>
