--- a/Pages/Shared/__css.cshtml
+++ b/Pages/Shared/__css.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <!-- Icon Font Stylesheet -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -11,8 +11,14 @@
 <link href="~/landingpage/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <link href="~/landingpage/lib/animate/animate.min.css" rel="stylesheet">
 
-<!-- Customized Bootstrap Stylesheet -->
+<!-- Bootstrap (manter temporariamente) -->
 <link href="~/landingpage/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Template Stylesheet -->
+<!-- SeveroTech Design System -->
+<link href="~/assets/css/base/variables.css" rel="stylesheet">
+<link href="~/assets/css/base/reset.css" rel="stylesheet">
+<link href="~/assets/css/base/typography.css" rel="stylesheet">
+<link href="~/assets/css/main.css" rel="stylesheet">
+
+<!-- Template Original (manter temporariamente durante migraÃ§Ã£o) -->
 <link href="~/landingpage/css/style.css" rel="stylesheet">
